adding modals and react-table and moment

--- a/ui/src/Dashboard/dashboard.scss
+++ b/ui/src/Dashboard/dashboard.scss
@@ -3,3 +3,5 @@
     background-color: white;
     padding: 2%;
 };
+
+.ideal-click {color: grey; cursor: pointer; .react-table-click-text {text-decoration: underline; padding-right: 5px;} .comments {font-size: 0.8em;}}
