validation and modal content

--- a/ui/src/Dashboard/dashboard.scss
+++ b/ui/src/Dashboard/dashboard.scss
@@ -5,3 +5,5 @@
 };
 
 .ideal-click {color: grey; cursor: pointer; .react-table-click-text {text-decoration: underline; padding-right: 5px;} .comments {font-size: 0.8em;}}
+
+.dashboard-modal-field-group > * {display: inline}
