--- a/ui/src/sass/index.scss
+++ b/ui/src/sass/index.scss
@@ -9,8 +9,8 @@ body {
   padding: 0px auto;
 }
 
-html { height: 100%; overflow-x: hidden;}
-body {height: 100%; }
+html { height: 100%;}
+body { height: 100%; overflow: hidden;}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
