--- a/ui/src/Layout/errorModal.scss
+++ b/ui/src/Layout/errorModal.scss
@@ -6,3 +6,8 @@
     height: 10px;
     cursor: pointer;
 }
+
+.dashboard-modal-error-field-head {font-size: 0.7em;}
+.warning-message {display: inline;}
+.icon {color: red; font-size: 2em;}
+.error-button {display: block; margin: 0 auto;}
