--- a/ui/src/Dashboard/dashboard.scss
+++ b/ui/src/Dashboard/dashboard.scss
@@ -4,6 +4,16 @@
     padding: 2%;
 };
 
-.ideal-click {color: grey; cursor: pointer; .react-table-click-text {text-decoration: underline; padding-right: 5px;} .comments {font-size: 0.8em;}}
+.ideal-click {
+    color: grey; 
+    cursor: pointer; 
+    
+    .react-table-click-text {
+        text-decoration: underline; 
+        padding-right: 5px;
+    } 
+    
+    .comments {font-size: 0.8em;}
+}
 
-.dashboard-modal-field-group > * {display: inline}
+    .dashboard-modal-field-group > * {display: inline}
