adding all selector components

--- a/ui/src/Layout/MegaMenu.scss
+++ b/ui/src/Layout/MegaMenu.scss
@@ -17,5 +17,7 @@
     .opened {
     display: block !important;
   }
+  
+  .mega-menu-wrapper {padding: 30px;}
 
   /* Create three equal columns that floats next to each other */
