--- a/ui/src/Layout/Header.scss
+++ b/ui/src/Layout/Header.scss
@@ -12,15 +12,16 @@
     // .col {border: solid red;}
     .row {width: 100%}
 
-    a, #mega-menu {
+    .header-item, #mega-menu {
         display: inline-block; 
         padding: 10px 10px 10px 10px;
          color: rgb(255, 185, 29); 
-         float: right !important;
+         float: right;
         }
 
     .header-item:hover {
         background-color: rgb(81, 81, 81);
         text-decoration: none;
     }
+    .header-elem {cursor: pointer;}
 }
