--- a/ui/src/Layout/MegaMenu.scss
+++ b/ui/src/Layout/MegaMenu.scss
@@ -5,7 +5,7 @@
   #mega-menu .dropdown-content {
     display: none;
     position: fixed;
-    margin-top: 50px;
+    margin-top: 30px;
     background-color: #f9f9f9;
     width: 100%;
     left: 0;
@@ -21,3 +21,7 @@
   .mega-menu-wrapper {padding: 30px;}
 
   /* Create three equal columns that floats next to each other */
+
+  .mega-menu-children:nth-child(4) p {
+    visibility: hidden;
+  }
