backdrop and language picker

--- a/ui/src/sass/SignIn.scss
+++ b/ui/src/sass/SignIn.scss
@@ -1,7 +1,5 @@
-.signIn {
-    margin-top: 30vh;
-    height: 90vh;
-    min-height: 75vh;
+#signIn {
+    padding-top: 22%;
     text-align: right;
     margin-left: 10%;
     margin-right: 10%;
