--- a/ui/src/sass/index.scss
+++ b/ui/src/sass/index.scss
@@ -16,3 +16,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.drop-shadow {
+  text-shadow: 1px 2px 3px #000000;
+  }
