--- a/ui/src/sass/_colors.scss
+++ b/ui/src/sass/_colors.scss
@@ -1,4 +1,5 @@
 $color-orange: rgb(255, 185, 29);
 $color-black: rgb(53, 53, 53);
 $color-grey: rgb(226, 225, 221);
-$color-white: rgb(255, 255, 255)
+$color-white: rgb(255, 255, 255);
+$color-link: #e28710;
