--- a/ui/src/Dashboard/dashboard.scss
+++ b/ui/src/Dashboard/dashboard.scss
@@ -1,5 +1,7 @@
+@import '../sass/_colors.scss';
+
 .wrapper-main {
-    height: 90vh;
+    // height: 90vh;
     background-color: white;
     padding: 2%;
 };
@@ -16,4 +18,10 @@
     .comments {font-size: 0.8em;}
 }
 
+    .fa-search-plus {float: right;}
     .dashboard-modal-field-group > * {display: inline}
+
+    .table-click:hover {
+        cursor: pointer;
+        color: $color-link;
+    }
