--- a/ui/src/sass/index.scss
+++ b/ui/src/sass/index.scss
@@ -10,7 +10,7 @@ body {
 }
 
 html { height: 100%;}
-body { height: 100%; overflow: hidden;}
+body { height: 100%; overflow-x: hidden;}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
