--- a/ui/src/sass/SignIn.scss
+++ b/ui/src/sass/SignIn.scss
@@ -6,4 +6,14 @@
     font-size: calc(10px + 2vmin);
     color: white;
     overflow-y: hidden !important;
+    // background-color: black;
+  }
+
+
+  .app-info > * {
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 1px #000000;
+    padding: 10px 10px 10px 20px;
+    margin-top: 100px;
+    max-width: 35%;
   }
