--- a/ui/src/Dashboard/dashboard.scss
+++ b/ui/src/Dashboard/dashboard.scss
@@ -77,3 +77,4 @@
 #previous-shift:hover, #current-shift:hover {background-color: rgb(207, 153, 3);}
 
 .pattern-red {background-color: red;}
+.pattern-green {background-color: green;}
