--- a/ui/src/sass/main.scss
+++ b/ui/src/sass/main.scss
@@ -11,7 +11,7 @@
 @import "../Layout/BlinkDots";
 @import "../Layout/CommentsModal";
 @import "../Layout/DatePicker";
-@import "../Layout/DropdownModal";
+@import "../Layout/TimelossModal";
 @import "../Layout/ErrorModal";
 @import "../Layout/Header";
 @import "../Layout/LanguagePicker";
