--- a/ui/src/Layout/CommentsModal.scss
+++ b/ui/src/Layout/CommentsModal.scss
@@ -14,3 +14,9 @@
 .commentsModal-date {
     font-size: 0.8em;
 }
+
+.comments-table {
+  display: block; /* important */
+  height: 500px;
+  overflow-y: scroll;
+}
