--- a/ui/src/Layout/ErrorModal.scss
+++ b/ui/src/Layout/ErrorModal.scss
@@ -12,3 +12,4 @@
 .success-message{display: inline; color: green;}
 .icon {font-size: 2em;}
 .error-button {display: block; margin: 0 auto;}
+.dashboard-modal-signoff-header {text-transform: capitalize}
