--- a/ui/src/Layout/ErrorModal.scss
+++ b/ui/src/Layout/ErrorModal.scss
@@ -13,3 +13,8 @@
 .icon {font-size: 2em;}
 .error-button {display: block; margin: 0 auto;}
 .dashboard-modal-signoff-header {text-transform: capitalize}
+.signoff-buttons {
+    display: table;
+    margin: auto;
+    width: 20%;
+}
