adding timeloss end to end

--- a/ui/src/Layout/TimelossModal.scss
+++ b/ui/src/Layout/TimelossModal.scss
@@ -57,7 +57,6 @@
 }
 
 .timeloss-top {display: inline;}
-
 .new-timeloss-reasoncode { margin-bottom: 5px;}
 
 .new-timeloss-close {text-align: right;}
@@ -69,3 +68,6 @@
     text-align: center;
     width: 50%;
     }
+
+.react-select-container {width: 95%}
+.react_control__menu {height: 150px; overflow: hidden;}
