--- a/ui/src/Layout/MachinePicker.scss
+++ b/ui/src/Layout/MachinePicker.scss
@@ -14,3 +14,9 @@
     text-align: left;
 }
 
+.machine-picker div {
+    max-height: 50vh !important;
+    overflow-y: scroll;
+    width: 60%;
+}
+
