manual data entry

--- a/ui/src/Layout/ManualEntryModal.scss
+++ b/ui/src/Layout/ManualEntryModal.scss
@@ -76,3 +76,13 @@
 
 .react-select-container {width: 95%}
 .react_control__menu {height: 150px; overflow: hidden;}
+
+.manualentry-field {
+    border: 1px solid lightgrey;
+    padding-top: 5px;
+    border-radius: 3px;
+}
+
+.manualentry-select {
+    padding-left: 0px;
+}
