ticket style fixes

--- a/ui/src/Layout/TimelossModal.scss
+++ b/ui/src/Layout/TimelossModal.scss
@@ -74,5 +74,4 @@
     width: 50%;
     }
 
-.react-select-container {width: 95%}
-.react_control__menu {height: 150px; overflow: hidden;}
+.react_control__menu {height: 220px !important; overflow-y: hidden}
