data import and pagination fix

--- a/ui/src/Dashboard/dashboard.scss
+++ b/ui/src/Dashboard/dashboard.scss
@@ -6,6 +6,11 @@
     padding: 2%;
 };
 
+.wrapper-main-import {
+    // height: 90vh;
+    background-color: white;
+};
+
 .empty-field {
     padding-right: 24px;
 }
