--- a/ui/src/Layout/Header.scss
+++ b/ui/src/Layout/Header.scss
@@ -25,3 +25,9 @@
     }
     .header-elem {cursor: pointer;}
 }
+
+.import-wrapper {
+    margin: 100px 75px 0px 75px;
+    padding: 50px;
+    border: solid lightgray 1px;
+}
