Map changes of add import view
Map changes of add import view. Validate only users with admin role can see the view.

--- a/ui/src/Layout/Header.scss
+++ b/ui/src/Layout/Header.scss
@@ -31,3 +31,15 @@
     padding: 50px;
     border: solid lightgray 1px;
 }
+
+.title {
+color: #fff;
+    float: left;
+    vertical-align: middle;
+    margin-left: 0px;
+    float: left;
+    height: 50px;
+    padding: 15px 15px;
+    font-size: 25px;
+    line-height: 30px;
+}
