--- a/ui/src/Layout/Header.scss
+++ b/ui/src/Layout/Header.scss
@@ -43,3 +43,21 @@ color: #fff;
     font-size: 25px;
     line-height: 30px;
 }
+
+.customToogle:hover {
+    background-color: rgb(81, 81, 81);
+    text-decoration: none;   
+}
+
+.dropdown-toggle::after {
+    display: none;
+}
+
+a:hover {
+    background-color: rgb(81, 81, 81);
+    text-decoration: none;   
+}
+
+.navbar-brand{
+    padding-left: 15px;
+}
