Change header to first hierarchy
Change header to first hierarchy and create new component to test new view, remove header from dashboard one and import view. Change way to resfresh data and change language

--- a/ui/src/Layout/MegaMenu.scss
+++ b/ui/src/Layout/MegaMenu.scss
@@ -2,7 +2,7 @@
     // background-color: white;
   }
   
-  #mega-menu .dropdown-content {
+  .dropdown-content {
     display: none;
     position: fixed;
     margin-top: 25px;
@@ -24,4 +24,8 @@
 
   .mega-menu-children:nth-child(5) p {
     visibility: hidden;
+  }
+
+  .title_child{
+    color: #ffb91d;
   }
