--- a/ui/src/Layout/Header.scss
+++ b/ui/src/Layout/Header.scss
@@ -1,12 +1,13 @@
 .navbar {
-    height: 10vh; 
-    background-color: rgb(31, 31, 31);
+    height: 13vh; 
+    background-color: #333333;
     .links {
         padding-bottom: 10px !important;
     }
     .App-logo {
-        height: 90%;
-         width: auto; 
+        margin-top: 2%;
+        height: 80%;
+        width: 30%; 
         }
 
     // .col {border: solid red;}
@@ -15,12 +16,12 @@
     .header-item, #mega-menu {
         display: inline-block; 
         padding: 10px 10px 10px 10px;
-         color: rgb(255, 185, 29); 
+         color: #ffe600; 
          float: right;
         }
 
     .header-item:hover {
-        background-color: rgb(81, 81, 81);
+        background-color: #333333;
         text-decoration: none;
     }
     .header-elem {cursor: pointer;}
@@ -29,7 +30,7 @@
 .import-wrapper {
     margin: 100px 75px 0px 75px;
     padding: 50px;
-    border: solid lightgray 1px;
+    border: solid #c0c0c0 1px;
 }
 
 .title {
@@ -45,7 +46,7 @@ color: #fff;
 }
 
 .customToogle:hover {
-    background-color: rgb(81, 81, 81);
+    background-color: #999999;
     text-decoration: none;   
 }
 
@@ -54,7 +55,7 @@ color: #fff;
 }
 
 a:hover {
-    background-color: rgb(81, 81, 81);
+    background-color: #999999;
     text-decoration: none;   
 }
 
@@ -65,7 +66,7 @@ a:hover {
 .import-wrapper {
     margin: 100px 75px 0px 75px;
     padding: 50px;
-    border: solid lightgray 1px;
+    border: solid #999999 1px;
 }
 
 .dropdown-toggle::after {
