--- a/ui/src/Layout/Header.scss
+++ b/ui/src/Layout/Header.scss
@@ -6,8 +6,9 @@
     }
     .App-logo {
         margin-top: 2%;
-        height: 80%;
-        width: 30%; 
+        margin-left: 8%;
+        // height: 80%;
+        // width: 30%; 
         }
 
     // .col {border: solid red;}
