--- a/ui/src/Layout/Header.scss
+++ b/ui/src/Layout/Header.scss
@@ -7,8 +7,8 @@
     .App-logo {
         margin-top: 2%;
         margin-left: 8%;
-        // height: 80%;
-        // width: 30%; 
+        height: 80%;
+        width: 20%; 
         }
 
     // .col {border: solid red;}
