Revert "Merged PR 11: scrap changes added to the backend"

--- a/ui/src/Dashboard/dashboard.scss
+++ b/ui/src/Dashboard/dashboard.scss
@@ -20,7 +20,7 @@
 
     .table-click:hover {
         cursor: pointer;
-        color: #cf9903;
+        color: $color-link;
     }
     
     .icon-arrow {
