--- a/ui/src/sass/_colors.scss
+++ b/ui/src/sass/_colors.scss
@@ -1,7 +1,5 @@
-$color-orange: #ffe600;
-$color-black: #646464;
+$color-orange: rgb(255, 185, 29);
+$color-black: rgb(53, 53, 53);
 $color-grey: rgb(226, 225, 221);
 $color-white: rgb(255, 255, 255);
-$color-blue: #00a3ae;
-$color-link: #ffff00;
-// $color-link: #cf9903;
+$color-link: #e28710;
