update scss files EY site

--- a/ui/src/sass/Pagination.scss
+++ b/ui/src/sass/Pagination.scss
@@ -24,7 +24,7 @@
 
 #previous-shift:hover,
 #current-shift:hover {
-    background-color: $color-orange-back;
+    background-color: $color-link-hover;
     cursor          : pointer;
 }
 
