--- a/ui/src/sass/_colors.scss
+++ b/ui/src/sass/_colors.scss
@@ -1,10 +1,11 @@
 $color-orange     : rgb(255, 185, 29);
 $color-black      : rgb(31, 31, 31);
-$color-grey       : rgb(53, 53, 53);
+$color-grey       : rgb(51, 51, 51);
 $color-light-grey : rgb(226, 225, 221);
 $color-dark-grey  : rgb(81, 81, 81);
 $color-white      : rgb(255, 255, 255);
-$color-link       : rgb(255, 185, 29);
+$color-link       : rgb(255, 230, 0);
+$color-link-hover : rgb(255, 255, 153);
 $color-orange-back:rgb(207, 153, 3);
 $color-gradient1  : rgba(0, 0, 0, 0.3);
 $color-gradient2  : rgba(0, 0, 0, 0.8);
