--- a/ui/src/sass/_colors.scss
+++ b/ui/src/sass/_colors.scss
@@ -1,12 +1,16 @@
-$color-orange     : rgb(255, 185, 29);
-$color-black      : rgb(31, 31, 31);
-$color-grey       : rgb(53, 53, 53);
-$color-light-grey : rgb(226, 225, 221);
-$color-dark-grey  : rgb(81, 81, 81);
-$color-white      : rgb(255, 255, 255);
-$color-link       : rgb(255, 185, 29);
-$color-orange-back:rgb(207, 153, 3);
-$color-gradient1  : rgba(0, 0, 0, 0.3);
-$color-gradient2  : rgba(0, 0, 0, 0.8);
-$color-blue       : rgb(0, 123, 255);
-$color-yellow     : rgb(240, 230, 140);
+$color-orange      : rgb(255, 185, 29);
+$color-black       : rgb(31, 31, 31);
+$color-grey        : rgb(53, 53, 53);
+$color-light-grey  : rgb(226, 225, 221);
+$color-grey-border : rgb(226, 226, 226);
+$color-dark-grey   : rgb(81, 81, 81);
+$color-white       : rgb(255, 255, 255);
+$color-white-back  : rgb(246, 246, 246);
+$color-link        : rgb(255, 185, 29);
+$color-orange-back :rgb(207, 153, 3);
+$color-gradient1   : rgba(0, 0, 0, 0.3);
+$color-gradient2   : rgba(0, 0, 0, 0.8);
+$color-blue        : rgb(0, 123, 255);
+$color-yellow      : rgb(240, 230, 140);
+$color-red         : rgb(255, 0, 0);
+$color-green       :rgb(0, 128, 0);
