--- a/ui/src/sass/Import.scss
+++ b/ui/src/sass/Import.scss
@@ -7,5 +7,5 @@
 .import-wrapper {
     margin : 100px 75px 0px 75px;
     padding: 50px;
-    border : solid lightgray 1px;
+    border : 1px solid $color-grey-border;
 }
