--- a/ui/src/sass/Intershift.scss
+++ b/ui/src/sass/Intershift.scss
@@ -4,7 +4,7 @@
     margin-top   : 30px;
     padding      : 30px;
     border-radius: 5px;
-    border       : 1px solid rgb(226, 226, 226);
+    border       : 1px solid $color-grey-border;
 }
 
 .intershift-read-more {
