--- a/ui/src/sass/MessageModal.scss
+++ b/ui/src/sass/MessageModal.scss
@@ -2,17 +2,32 @@
 
 .close-modal-icon {
     position: absolute;
-    top:0;
-    right:5px;
-    width: 10px;
-    height: 10px;
-    cursor: pointer;
+    top     : 0;
+    right   : 5px;
+    width   : 10px;
+    height  : 10px;
+    cursor  : pointer;
 }
-.warning-message{display: inline; color: red;}
-.success-message{display: inline; color: green;}
-.icon {font-size: 2em;}
-.close-button {display: block; margin: 0 auto;}
 
-.messageModal{
+.warning-message {
+    display: inline;
+    color  : $color-red;
+}
+
+.success-message {
+    display: inline;
+    color  : $color-green;
+}
+
+.icon {
+    font-size: 2em;
+}
+
+.close-button {
+    display: block;
+    margin : 0 auto;
+}
+
+.messageModal {
     background-color: $color-gradient1;
 }
