--- a/ui/src/sass/SupervisorLogInModal.scss
+++ b/ui/src/sass/SupervisorLogInModal.scss
@@ -1,18 +1,18 @@
 @import "./colors";
 
 .SupervisorTitle {
-    color: $color-yellow;
-    width: 40%;
+    color         : $color-orange;
+    width         : 40%;
     vertical-align: middle;
-    font-size: xx-large;
+    font-size     : xx-large;
 }
 
 .SupervisorTitle .icon {
     margin-right: 5%;
-    margin-left: 5%;
+    margin-left : 5%;
 }
 
-.supervisorMessage{
+.supervisorMessage {
     font-size: larger;
 }
 
@@ -25,4 +25,6 @@
     margin-left: 4%;
     height     : 100px;
     width      : 200px;
+    font-weight: bold;
+    font-size  : medium;
 }
