--- a/ui/src/sass/LogOffModal.scss
+++ b/ui/src/sass/LogOffModal.scss
@@ -7,6 +7,9 @@
     margin-left: 4%;
     height: 200%;
     width: 50%;
+    font-weight: bold;
+    font-size  : medium;
+    text-align: center;
 }
 
 .LogOffMessage {
