Add checkout operators for Administrators and Supervisors

--- a/ui/src/sass/main.scss
+++ b/ui/src/sass/main.scss
@@ -2,9 +2,11 @@
 @import 'ActualModal.scss';
 @import 'App.scss';
 @import 'BarcodeScannerModal.scss';
+@import 'CheckOutModal.scss';
 @import 'CommentModal.scss';
 @import 'Dashboard.scss';
 @import 'DashboardTable.scss';
+@import 'DigitalCups.scss';
 @import 'Header.scss';
 @import 'Import.scss';
 @import 'Intershift.scss';
