--- a/ui/src/sass/main.scss
+++ b/ui/src/sass/main.scss
@@ -1,4 +1,5 @@
 @import '_colors.scss';
+@import 'ActiveOperatorModal.scss';
 @import 'ActualModal.scss';
 @import 'App.scss';
 @import 'BarcodeScannerModal.scss';
