--- a/ui/public/css/styles.css
+++ b/ui/public/css/styles.css
@@ -1,25 +1,35 @@
 .actualModal .modal-dialog {
   max-width: 20%; }
 
-.App {
-  text-align: center; }
+.btnYellow {
+  color: #ffb91d;
+  background-color: transparent;
+  border-color: #ffb91d; }
 
-.app-wrapper {
-  background-image: linear-gradient(to bottom, #000000, #171717, #272727, #373737, #494949); }
+.btnYellow:hover {
+  color: white;
+  background-color: #ffb91d;
+  border-color: #ffb91d; }
 
-.App-logo {
-  /* animation: App-logo-spin infinite 20s linear; */
-  height: 20vmin;
-  pointer-events: none; }
+.btnGreen {
+  color: green;
+  background-color: transparent;
+  border-color: green; }
 
-.App-link {
-  color: #61dafb; }
+.btnGreen:hover {
+  color: white;
+  background-color: green;
+  border-color: green; }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg); }
-  to {
-    transform: rotate(360deg); } }
+.btnRed {
+  color: #b80600;
+  background-color: transparent;
+  border-color: #b80600; }
+
+.btnRed:hover {
+  color: white;
+  background-color: #b80600;
+  border-color: #b80600; }
 
 .barcodeScannerModal {
   background-color: rgba(0, 0, 0, 0.3); }
@@ -66,7 +76,7 @@
   background-color: #f6f6f6;
   padding: 100%;
   overflow: scroll;
-  color: red; }
+  color: #b80600; }
 
 .ideal {
   padding: 5px 30px 5px 30px; }
@@ -78,13 +88,13 @@
     color: #ffb91d !important; }
 
 .signoff-reminder-true {
-  color: red;
+  color: #b80600;
   font-weight: bolder;
   animation: blinker 1s linear infinite;
   text-align: center; }
 
 .signoff-reminder-icon {
-  color: red;
+  color: #b80600;
   animation: blinker 1s linear infinite;
   text-align: center;
   width: 100%; }
@@ -158,13 +168,31 @@ a:hover {
   color: #353535;
   border: solid 1px #353535; }
 
+.machine-picker-button .dropdown-toggle::after {
+  margin-left: 6%;
+  float: right;
+  margin-top: 4%; }
+
+.dropdown-toggle,
+.btn-primary {
+  border: solid 1px #e2e2e2;
+  width: 60%;
+  background-color: #f6f6f6;
+  color: #1f1f1f;
+  text-align: left; }
+
+.machine-picker div {
+  max-height: 50vh !important;
+  overflow-y: scroll;
+  width: 60%; }
+
 .wrapper-main-import {
   background-color: white; }
 
 .import-wrapper {
   margin: 100px 75px 0px 75px;
   padding: 50px;
-  border: solid lightgray 1px; }
+  border: 1px solid #e2e2e2; }
 
 .intershift-communication-comments {
   margin-top: 30px;
@@ -212,7 +240,10 @@ a:hover {
 .logoffbuttons .btn {
   margin-left: 4%;
   height: 200%;
-  width: 50%; }
+  width: 50%;
+  font-weight: bold;
+  font-size: medium;
+  text-align: center; }
 
 .LogOffMessage {
   font-size: x-large; }
@@ -230,7 +261,7 @@ a:hover {
 
 .warning-message {
   display: inline;
-  color: red; }
+  color: #b80600; }
 
 .success-message {
   display: inline;
@@ -300,12 +331,12 @@ a:hover {
     padding: 0px 10px 0px 10px; }
   .number-field input {
     border-radius: 3px;
-    border: 1px solid #b9b9b9;
+    border: 1px solid #e2e2e2;
     width: 15%;
     text-align: center; }
 
 .new-timeloss {
-  border: 1px solid #b9b9b9;
+  border: 1px solid #e2e2e2;
   border-radius: 3px;
   padding: 10px; }
 
@@ -338,7 +369,7 @@ a:hover {
   font-size: 0.9em; }
 
 .timelost-field {
-  border: 1px solid #b9b9b9;
+  border: 1px solid #e2e2e2;
   border-radius: 3px;
   padding: 5px;
   text-align: center;
@@ -445,7 +476,7 @@ a:hover {
     opacity: 0; } }
 
 .SupervisorTitle {
-  color: khaki;
+  color: #ffb91d;
   width: 40%;
   vertical-align: middle;
   font-size: xx-large; }
@@ -464,4 +495,6 @@ a:hover {
 .roleButtons .btn {
   margin-left: 4%;
   height: 100px;
-  width: 200px; }
+  width: 200px;
+  font-weight: bold;
+  font-size: medium; }
