Create user ready

--- a/ui/src/sass/SystemAdmin.scss
+++ b/ui/src/sass/SystemAdmin.scss
@@ -10,6 +10,31 @@
   margin-bottom: 30px;
 }
 
+.input-badge{
+  margin-left: 40px;
+}
+
+.input-username{
+  margin-left: 14px;
+}
+
+.input-firstname{
+  margin-left: 9px;
+}
+
+.input-lastname{
+  margin-left: 10px;
+}
+
+.input-role{
+  margin-left: 54px;
+  padding-right: 133px;
+}
+
+.input-status{
+  margin-left: 42px;
+}
+
 .filter-user {
   margin-top: 30px;
   border-style: groove;
