Escalation added in CREATE USER

--- a/ui/src/sass/SystemAdmin.scss
+++ b/ui/src/sass/SystemAdmin.scss
@@ -31,6 +31,11 @@
   padding-right: 133px;
 }
 
+.input-escalation{
+  margin-left: 15px;
+  padding-right: 133px;
+}
+
 .input-status{
   margin-left: 42px;
 }
