--- a/ui/src/sass/SystemAdmin.scss
+++ b/ui/src/sass/SystemAdmin.scss
@@ -62,6 +62,11 @@
     padding-right: 25px;
     color: white;
     cursor: pointer;
+
+    &.filter{
+      margin-right: 450px;
+
+    }
   }
 
   .p-filter {
