--- a/ui/src/sass/SystemAdmin.scss
+++ b/ui/src/sass/SystemAdmin.scss
@@ -19,10 +19,14 @@
 
 .input-sequence {
   margin-left: 27px;
-  padding-right: 44px;
+  margin-right: 182px;
+  padding-left: -3px;
+  width: 25px;
 }
 
 .text-description {
+  height: 168px;
+  width: 367px;
   margin-left: 15px;
 }
 
@@ -96,7 +100,7 @@
 .input-status {
   margin-left: 42px;
 
-  &.shift{
+  &.shift {
     margin-left: 51px;
   }
 }
