--- a/ui/src/sass/SystemAdmin.scss
+++ b/ui/src/sass/SystemAdmin.scss
@@ -18,10 +18,21 @@
 }
 
 .input-sequence {
-  margin-left: 27px;
-  margin-right: 182px;
-  padding-left: -3px;
-  width: 25px;
+  float: right;
+  margin-left: 26px;
+  margin-right: 181px;
+
+  .h5{
+    margin-left: 33px;
+    margin-top: -27px;
+  }
+
+  .increase{
+    float: right;
+    margin-left: 58px;
+    /* float: none; */
+    margin-top: -34px;
+  }
 }
 
 .text-description {
